<resources>
    <string name="app_name">Relax</string>
    <string name="app_version">Version 1.0</string>
    <string name="login_activity">Login</string>
    <string name="action_settings">Settings</string>

    <!-- Login and Create Account Screen -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account"><u>Sign Up</u></string>
    <string name="button_sign_in"><u>Sign In</u></string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">Sign in</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_address">Enter your address</string>
    <string name="hint_enter_phone">Enter your phone</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="required_field">This field is required</string>
    <string name="email_taken">This email is already taken</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_length_error">Password length must be  at least 6 charchters</string>
    <string name="username_length_error">Username length must be at least 3 charchters</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="error_occurred">Error occurred, try again!</string>
    <string name="invalid_phone_number">Enter a valid Phone number!</string>

    <!-- verification email messages -->
    <string name="sending_email_verification">Sending email verification…</string>
    <string name="verification_email_sent">Verification email sent to </string>
    <string name="verification_email_failed">Failed to send verification email.</string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_signin_user_with_firebase">Attempting to Sign In…</string>


    <string name="error_email_message">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="print_error_email_message">Email is not correct</string>
    <string name="error_password_message">The password is invalid or the user does not have a password.</string>
    <string name="print_error_password_message">Password is not correct</string>

    <!-- Google Client Id-->
    <string name="client_id">829099743165-eh9larfqjh6720npbk0sfniv63jai9fa.apps.googleusercontent.com</string>
    <string name="google_signin_failed">Google sign in failed</string>
    <string name="google_signin_successfull">Google sign in successfully</string>

    <string name="title_activity_home">LoginActivity</string>


    <!-- Facebook SDK-->
    <string name="facebook_app_id">1424489060994322</string>
    <string name="fb_login_protocol_scheme">fb1424489060994322</string>
    <string name="facebook_login_successfull">Logged in successfully with Facebook.</string>
    <string name="facebook_login_failed">Facebook login failed.</string>
    <string name="facebook_login_canceld">Facebook login Canceld.</string>


    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="error_saving_user">Error saving user, try again later!</string>

    <!-- nav drawer -->
    <string name="profile">Profile</string>
    <string name="new_order">New order</string>
    <string name="my_orders">My orders</string>
    <string name="sign_out">Sign out</string>
    <string name="facebook">Facebook</string>
    <string name="google_play">Google play</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call_us">Call us</string>
    <string name="title_activity_order">OrderActivity</string>


    <!-- order -->
    <string name="submit_order">Submit</string>
    <string name="new_item">New item</string>
    <string name="add_item_first">Add one item at least!</string>


    <!-- order dialog hints -->
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="exp_price">Expected price</string>
    <string name="market_or_location">Market -or- Location</string>
    <string name="notes">Notes</string>
    <string name="done">Done</string>
    <string name="add_new_item">Add new item</string>
    <string name="cancel">Cancel</string>


    <!--dynamic strings-->
    <string name="add_item_successfully">Item %1$s added successfully.</string>

    <!-- activity names-->
    <string name="order_activity">New Order</string>
    <string name="myorders_activity">My orders</string>

    <!--  -->
    <string name="signout_caution">Are you sure you want to sign out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>


</resources>
