<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/dialog_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/new_item"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/dialog_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textfield_round_corners"
                            android:hint="@string/name"
                            android:inputType="textCapWords"
                            android:nextFocusDown="@+id/edit_text_password"
                            android:padding="@dimen/edit_text_padding"

                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/login_buttons_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_item_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/dialog_item_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textfield_round_corners"
                            android:hint="@string/quantity"
                            android:inputType="numberDecimal"
                            android:padding="@dimen/edit_text_padding"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/login_buttons_text_size" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_dialog_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/dialog_item_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textfield_round_corners"
                            android:hint="@string/exp_price"
                            android:inputType="numberDecimal"
                            android:padding="@dimen/edit_text_padding"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/login_buttons_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_dialog_market"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/dialog_item_market"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textfield_round_corners"
                            android:hint="@string/market_or_location"
                            android:inputType="textPostalAddress"
                            android:padding="@dimen/edit_text_padding"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/login_buttons_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_phone_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/dialog_item_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/textfield_round_corners"
                            android:hint="@string/notes"
                            android:inputType="textMultiLine"
                            android:padding="@dimen/edit_text_padding"
                            android:singleLine="false"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/login_buttons_text_size" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <Button
                        android:id="@+id/done_dialog_item_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_round_corners"
                        android:text="@string/done"
                        tools:ignore="RelativeOverlap" />

                    <Button
                        android:id="@+id/cancel_dialog_item_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/button_round_corners"
                        android:text="@string/cancel" />


                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </FrameLayout>
</ScrollView>